@@ -1,3 +1,4 @@
+* [#19] Prevent repeated state file tasks on resumming interrupted run 
 * [#18] Flush task state files on interrupt
 v1.1.17 20170526
 * Make workflow task specification notice less verbose
